# sistem-manajement-proyek

./: .editorconfig  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  seeder.py  sse.py  websocket.py
app/api/: api.py
app/api/dependencies/: authentication.py  dashboard.py  events.py  project.py  project_manager.py  proyek_manager.py  repositories.py  services.py  sessions.py  task.py  task_manager.py  uow.py  user.py  user_role_manager.py
app/api/routes/: assignee_task_route.py  attachment_route.py  auth_route.py  category_route.py  comment_route.py  dashboard_route.py  milestone_route.py  notification_route.py  project_member_route.py  project_route.py  proyek_route.py  task_route.py  user_route.py
app/client/: __init__.py  pegawai_client.py
app/core/: config.py
app/core/config/: __init__.py  api_pegawai.py  logging.py  pusher.py  settings.py
app/core/domain/: bus.py  event.py  subscribers.py
app/core/events/: audit_events.py  bus.py  register_events.py
app/core/policies/: project_member.py  query_policies.py  task.py  user_role.py
app/core/realtime/: __init__.py  connection_manager.py  drivers.py  notification.py  sse_manager.py  websocket_manager.py
app/db/: __init__.py  base.py  meta.py
app/db/migrations/: env.py
app/db/models/: __init__.py  attachment_model.py  audit_model.py  category_model.py  comment_model.py  milestone_model.py  mixin.py  notification_model.py  project_member_model.py  project_model.py  proyek_model.py  role_model.py  task_assigne_model.py  task_model.py  tugas_model.py
app/db/repositories/: attachment_repository.py  audit_repository.py  category_repository.py  comment_repository.py  dashboard_repository.py  generic_repository.py  milestone_repository.py  notification_repository.py  project_reepository.py  project_repository.py  task_repository.py  user_repository.py
app/db/uow/: sqlalchemy.py
app/middleware/: __init__.py  context_middleware.py  request_middleware.py
app/schemas/: attachment.py  audit.py  base.py  category.py  comment.py  dashboard.py  milestone.py  mixin.py  notification.py  pagination.py  project.py  project_member.py  proyek.py  task.py  token.py  user.py
app/services/: attachment_service.py  base_service.py  category_service.py  comment_service.py  dashboard_service.py  milestone_service.py  notification_service.py  pegawai_service.py  project_service.py  task_service.py  user_service.py
app/static/: robots.txt
app/templates/: pusher_test_notify.html
app/utils/: aiohttp_client.py  cloudinary.py  common.py  error_handler.py  exceptions.py  mail.py  pagination.py
(+53 files in other folders)
